tests/snapshots/snapshots__search_github.snap
---
source: tests/snapshots.rs
expression: html
---

<div role="group" aria-labelledby="command-keys">
  <span role="heading" id="command-keys">Keys</span>
  
  <a role="menuitem" href="/keys/renovate-github" class="active">
    <span class="state-dot" data-state="warning"></span>
    <span class="truncate">Renovate – GitHub token</span>
    <span class="ms-auto" data-shortcut>Due soon · in 10d</span>
  </a>
  
  <a role="menuitem" href="/keys/github-repo-migration">
    <span class="state-dot" data-state="on-demand"></span>
    <span class="truncate">GitHub – repo migration (on demand)</span>
    <span class="ms-auto" data-shortcut>On demand · used 12d ago</span>
  </a>
  
</div>
