tests/snapshots/snapshots__table_expired.snap
---
source: tests/snapshots.rs
expression: html
---

<div class="table-container rounded-lg border">
  <table class="table">
    <thead>
      <tr>
        <th>Key</th>
        <th>Status</th>
        <th>Due</th>
        <th class="hidden md:table-cell">Last rotated</th>
        <th class="hidden lg:table-cell">Owner</th>
        <th class="hidden sm:table-cell">Targets</th>
        <th class="text-end"><span class="sr-only">Actions</span></th>
      </tr>
    </thead>
    <tbody>
      
      <tr>
        <td>
          <a href="/keys/hetzner-backups" class="font-medium hover:underline">Hetzner – backup box</a>
          <div class="flex items-center gap-1.5 text-xs text-muted-foreground">
            <span>generic</span>
            
          </div>
        </td>
        <td><span class="badge state-badge" data-state="expired"><span class="state-dot"></span>Expired</span></td>
        <td>
          
          <div title="2026-09-21">5d ago</div>
          <div class="text-xs text-muted-foreground">max age</div>
          
        </td>
        <td class="hidden md:table-cell text-muted-foreground">370d ago</td>
        <td class="hidden lg:table-cell text-muted-foreground">david</td>
        <td class="hidden sm:table-cell">
          
          <span class="badge" data-variant="destructive">1 of 1 failed</span>
          
        </td>
        <td class="text-end">
          
          
          <a class="btn" data-variant="ghost" data-size="sm" href="https://console.hetzner.cloud/" target="_blank" rel="noopener noreferrer">
            Renew <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M15 3h6v6" />
  <path d="M10 14 21 3" />
  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
</svg>
          </a>
          
          
        </td>
      </tr>
      
    </tbody>
  </table>
</div>

<div id="state-chips" class="flex flex-wrap gap-2" role="group" aria-label="Filter by state" hx-swap-oob="true">
  <label class="state-chip" data-active="false">
    <input type="radio" name="state" value="" class="sr-only" >
    All <span class="text-muted-foreground">6</span>
  </label>
  
  <label class="state-chip" data-state="expired" data-active="true">
    <input type="radio" name="state" value="expired" class="sr-only" checked>
    <span class="state-dot"></span>Expired <span class="text-muted-foreground">1</span>
  </label>
  
  <label class="state-chip" data-state="critical" data-active="false">
    <input type="radio" name="state" value="critical" class="sr-only" >
    <span class="state-dot"></span>Critical <span class="text-muted-foreground">1</span>
  </label>
  
  <label class="state-chip" data-state="warning" data-active="false">
    <input type="radio" name="state" value="warning" class="sr-only" >
    <span class="state-dot"></span>Due soon <span class="text-muted-foreground">1</span>
  </label>
  
  <label class="state-chip" data-state="unknown" data-active="false">
    <input type="radio" name="state" value="unknown" class="sr-only" >
    <span class="state-dot"></span>Unknown <span class="text-muted-foreground">1</span>
  </label>
  
  <label class="state-chip" data-state="ok" data-active="false">
    <input type="radio" name="state" value="ok" class="sr-only" >
    <span class="state-dot"></span>OK <span class="text-muted-foreground">1</span>
  </label>
  
  <label class="state-chip" data-state="on-demand" data-active="false">
    <input type="radio" name="state" value="on-demand" class="sr-only" >
    <span class="state-dot"></span>On demand <span class="text-muted-foreground">1</span>
  </label>
  
</div>
